fixed nudge styling (#1597)

--- a/ui/scss/component/_nudge.scss
+++ b/ui/scss/component/_nudge.scss
@@ -2,6 +2,7 @@
   z-index: 3;
   position: absolute;
   top: 4rem;
+  left: 0;
   white-space: normal;
   overflow: visible;
   padding: var(--spacing-m);
