--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -579,6 +579,7 @@ img {
     // margin-bottom: var(--spacing-l);
   }
   @media (min-width: $breakpoint-medium) {
+    margin-top: var(--spacing-s);
     margin-bottom: -3.7rem;
   }
 
