--- a/ui/scss/component/_button.scss
+++ b/ui/scss/component/_button.scss
@@ -179,6 +179,9 @@ a.button--alt {
     order: 1;
     background-repeat: no-repeat;
     background-position: center;
+    transform: scale(1.4);
+    margin-top: -4px;
+    margin-left: var(--spacing-xs);
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='19' height='19' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-monitor'%3E%3Crect x='2' y='3' width='20' height='14' rx='2' ry='2'%3E%3C/rect%3E%3Cline x1='8' y1='21' x2='16' y2='21'%3E%3C/line%3E%3Cline x1='12' y1='17' x2='12' y2='21'%3E%3C/line%3E%3C/svg%3E");
   }
 
@@ -234,7 +237,7 @@ a.button--alt {
   //
   // TEMP: for now, just hardcode the left-right margin so that it looks
   // equally spaced compared to its siblings.
-  margin: auto 0.5rem auto 0.7rem;
+  margin: 9px 0.5rem auto 0.7rem;
 
   order: 1;
   width: 24px;
