Adjust timestamp position

--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -585,7 +585,7 @@ $control-bar-icon-size: 2rem;
 
     .vjs-current-time {
       padding-right: 0;
-      margin-right: 0.4rem;
+      // margin-right: 0.4rem;
       @media (max-width: $breakpoint-small) {
         margin-right: 0.2rem;
       }
@@ -599,9 +599,10 @@ $control-bar-icon-size: 2rem;
 
     .vjs-duration {
       padding-left: 0;
-      margin-left: 0.4rem;
+      margin-left: var(--spacing-xs);
       @media (max-width: $breakpoint-small) {
-        margin-left: 0.2rem;
+        // margin-left: 0.2rem;
+        margin-left: var(--spacing-xs) !important;
       }
     }
   }
