--- a/ui/scss/component/_form-field.scss
+++ b/ui/scss/component/_form-field.scss
@@ -172,17 +172,28 @@ input-submit {
     margin: 0;
   }
 
+  & > *:not(:first-child):not(:last-child) {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
   & > *:first-child {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+    border-top-left-radius: var(--border-radius);
+    border-bottom-left-radius: var(--border-radius);
     border-right: none;
   }
-  // FIX THIS e.g. copyable text vs editable text
-  //& > *:nth-child(2) {
-  //  border-top-left-radius: 0;
-  //  border-bottom-left-radius: 0;
-  //  border: 1px solid var(--color-input-border);
-  //}
+
+  & > *:last-child {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: var(--border-radius);
+    border-bottom-right-radius: var(--border-radius);
+    border-right: none;
+  }
 }
 
 .checkbox,
