Tweak tip/boost toast message
- Split the friendly text (non-essential) to `subMessage`.
- Put a link to the wallet history for all these tipping toasts.
- Don't say "tip" for the Wallet Send action (Issue_1605)
- Make the link font-size smaller than the main text.

--- a/ui/scss/component/_snack-bar.scss
+++ b/ui/scss/component/_snack-bar.scss
@@ -75,6 +75,7 @@
   margin-left: auto;
   min-width: min-content;
   color: var(--color-white);
+  font-size: var(--font-small);
 
   span:hover {
     text-decoration: underline;
