take welcomeVersion out of sync

--- a/ui/scss/component/section.scss
+++ b/ui/scss/component/section.scss
@@ -304,7 +304,7 @@
     margin-top: 0;
     margin-bottom: 0;
   }
-  margin-bottom: var(--spacing-m);
+  padding-bottom: var(--spacing-m);
 }
 
 .settings__row--title {
