--- a/ui/scss/themes/dark.scss
+++ b/ui/scss/themes/dark.scss
@@ -80,6 +80,7 @@
   --color-input-label: var(--color-text);
   --color-input-placeholder: #f4f4f5;
   --color-input-bg: var(--color-header-background);
+  --color-input-bg-secondary: #333333;
   --color-input-bg-selected: var(--color-primary);
   --color-input-border: var(--color-border);
   --color-input-toggle: var(--color-primary-alt-3);
