--- a/ui/scss/themes/light.scss
+++ b/ui/scss/themes/light.scss
@@ -88,6 +88,7 @@
   --color-input-label: var(--color-text);
   --color-input-placeholder: #212529;
   --color-input-bg: var(--color-header-background);
+  --color-input-bg-secondary: #ffffff;
   --color-input-bg-selected: var(--color-primary);
   --color-input-border: var(--color-border);
   --color-input-toggle: var(--color-secondary);
